agregue copy,whatsapp y solucione el menu de las pagina

--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!--Este es el menu-->
+    <div class="grid">
     <header>
         <h1>TÉCNICO DE OBRA</h1>
         <nav>
@@ -28,9 +29,11 @@
                 <li>
                     <a href="./contacto.html">Contacto</a>
                 </li>
+                <li><a href="././index.html"><img src="../images/whatsapp.png" width="30px" height="30px" alt=""></a></li>
             </ul>
         </nav>
     </header>
+    </div>
 <main>
     <h2 id="titulo">contactanos</h2>
         <div><h2>CONTACTO</h2></div>
@@ -61,7 +64,7 @@
             </div>
             <div>
                 <label for="comentarios">Tu consulta</label><br>
-                <textarea name="Tu consulta" id="Tu consulta" cols="30" rows="10" placeholder="Escribe algo"></textarea>
+                <textarea name="Tu consulta" id="comentarios" cols="30" rows="10" placeholder="Escribe algo"></textarea>
             </div>
             <div>
                 <input type="submit" value="ENVIAR">
