--- a/assets/pages/nosotros.html
+++ b/assets/pages/nosotros.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!--Este es mi menu-->
+    <div class="grid">
     <header>
         <h1>TÉCNICO DE OBRA</h1>
         <nav>
@@ -28,10 +29,11 @@
                 <li>
                     <a href="./contacto.html">Contacto</a>
                 </li>
+                <li><a href="././index.html"><img src="../images/whatsapp.png" width="30px" height="30px" alt=""></a></li>
             </ul>
         </nav>
     </header>
-
+    </div>
 <main>
     <section>
         <h3>Somos un equipo de M.M.O. que pensamos en vos</h3>
