--- a/assets/pages/proyectos-realizados.html
+++ b/assets/pages/proyectos-realizados.html
@@ -29,10 +29,11 @@
                 <li>
                     <a href="./contacto.html">Contacto</a>
                 </li>
+                <li><a href="././index.html"><img src="../images/whatsapp.png" width="30px" height="30px" alt=""></a></li>
             </ul>
         </nav>
     </header>
-
+    </div>
 <main>
     <section>
         <h4>Nuestras proyectos realizados</h4>
@@ -55,6 +56,5 @@
         <p>Este es mi footer</p>
         
     </footer>
-    </div>
 </body>
 </html>
