--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -28,10 +28,11 @@
                 <li>
                     <a href="./contacto.html">Contacto</a>
                 </li>
+                <li><a href="././index.html"><img src="../images/whatsapp.png" width="30px" height="30px" alt=""></a></li>
             </ul>
         </nav>
     </header>
-
+    </div>
 <main>
     <section>
         <h2 id="tamaño">Diseñamos espacios perfectos</h2>
@@ -52,7 +53,6 @@
     <footer id="margin-top">
         <p>Este es mi footer</p>
     </footer>
-    </div>
 </body>
 
 </html>
