agrege grillas a los demas menus

--- a/assets/pages/proyectos-realizados.html
+++ b/assets/pages/proyectos-realizados.html
@@ -33,21 +33,20 @@
             </ul>
         </nav>
     </header>
-    </div>
-<main>
+    
+
     <section>
         <h4>Nuestras proyectos realizados</h4>
     </section>
-</main>
-<div>
-    <section class="flex">
 
-    <img src="../images/renders-vista-detall-original.webp" width="200px" height="180px" alt="">
-    <img src="../images/rt-02-planos-de-restaurantes-y-bloques-en-autocad-dwg_orig.jpg" width="200px" height="180px" alt="">
-    <img src="../images/99720.webp" width="200px" height="180px" alt="">
-    <img src="../images/images.jpg" width="200px" height="180px" alt="">
-    <img src="../images/que-es-Sketchup.jpg" width="200px" height="180px" alt="">
-    <img src="../images/renders-vista-detall-original.webp" width="200px" height="180px" alt="">
+<div>
+    <section>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </section>
 </div>
 
@@ -56,5 +55,6 @@
         <p>Este es mi footer</p>
         
     </footer>
+</div>
 </body>
 </html>
