--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
     </header>
-    </div>
+    
 <main>
     <section>
         <h2 id="tamaño">Diseñamos espacios perfectos</h2>
@@ -41,18 +41,21 @@
         </p>
     </section>
     <div>
-        <p id="font-size">Contamos con habilidades en:</p>
-        <ul>
-            <li class="video2">AutoCAD <iframe class="video" width="320" height="215" src="https://www.youtube.com/embed/kEeUIqq1kzQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </li>
-            <li class="video2">Sketchup<iframe class="video" width="320" height="215" src="https://www.youtube.com/embed/VoUq5aKDtOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-            <li class="video2">Render <iframe class="video" width="320" height="215" src="https://www.youtube.com/embed/MO9KVuL0Wxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+        <p>Contamos con habilidades en:</p>
+        <div>
+        <ul class="flexbox">
+            <li class="flexbox">AutoCAD <iframe class="video" width="320" height="215" src="https://www.youtube.com/embed/kEeUIqq1kzQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </li>
+            <li class="flexbox">Sketchup<iframe class="video" width="320" height="215" src="https://www.youtube.com/embed/VoUq5aKDtOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+            <li class="flexbox">Render <iframe class="video" width="320" height="215" src="https://www.youtube.com/embed/MO9KVuL0Wxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
         </ul>
+        </div>
 
     </div>
 </main>
     <footer id="margin-top">
         <p>Este es mi footer</p>
     </footer>
+    </div>
 </body>
 
 </html>
