--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
         </header>
 
-        <section class="margin" id="intro">
+        <section class="margin" class="intro">
             <h2>DIRECCIÓN TÉCNICA</h2>
             <div id="img"><img src="./assets/images/direccion-tecnica-jpg.jpg" width="350px" height="250px" alt=""></div>
             <p id="text">
@@ -48,7 +48,7 @@
 
             </p>
         </section>
-        <section id="info">
+        <section class="info">
             <div id="flex"><img src="./assets/images/planos-estrucrurales.jpg" width="360px" height="350px" alt=""></div>
             <p class="aling">
                 Los planos estructurales son una representación gráfica de elementos estructurales,
