agregue grids al servicio y flexbox

--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -34,23 +34,21 @@
     </header>
     
 <main>
+    
     <section>
-        <h2 id="tamaño">Diseñamos espacios perfectos</h2>
-        <p id="alineado">Nos enfocamos en conseguir un diseño moderno
+        <h2 id="titulo-servicio">Diseñamos espacios perfectos</h2>
+        <p id="copete-servicio">Nos enfocamos en conseguir un diseño moderno
             incorporando las necesidades e intereses de nuestros clientes.
         </p>
     </section>
-    <div>
-        <p>Contamos con habilidades en:</p>
-        <div>
-        <ul class="flexbox">
-            <li class="flexbox">AutoCAD <iframe class="video" width="320" height="215" src="https://www.youtube.com/embed/kEeUIqq1kzQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </li>
-            <li class="flexbox">Sketchup<iframe class="video" width="320" height="215" src="https://www.youtube.com/embed/VoUq5aKDtOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-            <li class="flexbox">Render <iframe class="video" width="320" height="215" src="https://www.youtube.com/embed/MO9KVuL0Wxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-        </ul>
-        </div>
-
-    </div>
+        <section>
+            <p>Contamos con habilidades en:</p>
+            <ul class="container">
+                <li class="maquetado">AutoCAD</li>
+                <li class="maquetado">Sketchup</li>
+                <li class="maquetado">Render</li>
+            </ul>
+        </section>
 </main>
     <footer id="margin-top">
         <p>Este es mi footer</p>
