--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="grid">
-        <header class="border">
+        <header>
             <h1>TECNICO DE OBRA</h1>
             
             <nav>
