--- a/index.html
+++ b/index.html
@@ -5,80 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="boostrap/css/bootstrap.min.css">
+    <script src="boostrap/js/jquery.slim.min.js"></script>
+    <script src="boostrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./assets/css/estilos.css">
 </head>
 <body>
-
-    <div class="grid">
-        <header>
-            <h1>TECNICO DE OBRA</h1>
-            
-            <nav>
-                <ul>
-                    <li>
-                        <a href="./index.html">Inicio</a>
-                    </li>
-                    <li><a href="./assets/pages/servicios.html">Servicios</a></li>
-                    <li><a href="./assets/pages/nosotros.html">Nosotros</a></li>
-                    <li><a href="./assets/pages/proyectos-realizados.html">Proyectos realizados</a></li>
-                    <li><a href="./assets/pages/contacto.html">Contacto</a></li>
-                    <li><a href="././index.html"><img src="./assets/images/whatsapp.png" width="30px" height="30px" alt=""></a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <section class="margin" class="intro">
-            <h2>DIRECCIÓN TÉCNICA</h2>
-            <div id="img"><img src="./assets/images/direccion-tecnica-jpg.jpg" width="350px" height="250px" alt=""></div>
-            <p id="text">
-                Se entiende por dirección técnica la función que el profesional desempeña
-                controlando la fiel interpretación de los planos y de la documentación técnica que
-                forma parte del proyecto, y la revisión y extensión de los certificados
-                correspondientes a pagos de la obra en ejecución, incluso el ajuste final de los
-                mismos.
-                Un profesional habilitado asume el carácter de Director Técnico de una obra,
-                cuando interviene en ella como supervisor de la conducción técnica de la misma.
-                Actuará como asesor del propietario, siendo su representante natural frente al
-                constructor de la obra, siendo su función, verificar que la misma se realice de
-                conformidad con las reglas del arte de construir constatando que los trabajos
-                respondan adecuadamente al plano de proyecto, pliego de condiciones y
-                especificaciones, calidad de los materiales convenidos y ejecución correcta de
-                estructuras, dando en todos los casos las instrucciones necesarias al constructor, a
-                fin de que se cumplan todas las disposiciones del contrato.
-
-            </p>
-        </section>
-        <section class="info">
-            <div id="flex"><img src="./assets/images/planos-estrucrurales.jpg" width="360px" height="350px" alt=""></div>
-            <p class="aling">
-                Los planos estructurales son una representación gráfica de elementos estructurales,
-                que siguen unas ciertas normas para su dibujo y su posterior interpretación.
-                Nos permiten guiarnos en la materialización de cualquier obra, por tal motivo,
-                debe tener el orden secuencial del proceso constructivo, haciendo constar, cada etapa de manera general,
-                mostrando además los detalles de cada elemento estructural que la conforma.
-            </p>
-            <div id="flex2"><img src="./assets/images/sismoresistente.png" width="360px" height="350px" alt=""></div>
-            <p class="font-family">MAMPOSTERIA SISMORRESISTENTE</p>
-                    <p class="font-family">
-                        <ul>
-                            <li class="font-family">
-                                <span> Mamposteria encadenada: Formadas por vigas y columnas
-                                de encadenado(+ usada).</span>
-                            </li>
-                            <li class="font-family">
-                                <span>Encadenada armada:  En la que ademas de vigas y columnas de encadenado
-                                se coloca armada en algunas juntas horizontales.
-                            </li>
-                        </ul>
-                    </p>
-        </section>
-
-        <aside>
-            
-        </aside>
-        <footer>
-            <p>copyright &COPY S.K;</p>
-        </footer>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6">
+              <header>
+                <h1>Tecnico de obra</h1>
+            </div>
+            <div class="col-6">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                      <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+                        <li class="nav-item active">
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#!">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#!">Servicio</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#!">Proyectos</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#!">Nosotros</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#!">Contacto</a>
+                          </li>
+                      </ul>
+                    </div>
+                  </nav>
+            </div>
+          </header>
+        </div>
     </div>
+
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-6">
+          <h2>Dirección técnica</h2>
+          <p>Se entiende por dirección técnica la función que el profesional desempeña controlando la fiel interpretación de los planos
+            y de la documentación técnica que forma parte del proyecto, y la revisión y extensión de los certificados correspondientes
+            a pagos de la obra en ejecución, incluso el ajuste final de los mismos. Un profesional habilitado asume el carácter de Director
+            Técnico de una obra, cuando interviene en ella como supervisor de la conducción técnica de la misma. Actuará como asesor del propietario,
+            siendo su representante natural frente al constructor de la obra, siendo su función, verificar que la misma se realice de conformidad con
+            las reglas del arte de construir constatando que los trabajos respondan adecuadamente al plano de proyecto, pliego de condiciones
+            y especificaciones, calidad de los materiales convenidos y ejecución correcta de estructuras, dando en todos los casos las 
+            instrucciones necesarias al constructor, a fin de que se cumplan todas las disposiciones del contrato.</p>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 col-xl-6">
+        <img id="img" src="./assets/images/direccion-tecnica-jpg.jpg" class="img-fluid" alt="Responsive image">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-6 col-lg-4 col-xl-6">
+        <img id="margin" src="./assets/images/planos-estrucrurales.jpg" class="img-fluid" alt="Responsive image"><br>
+        <p id="text">
+          Los planos estructurales son una representación gráfica de elementos estructurales, que siguen unas ciertas normas
+          para su dibujo y su posterior interpretación. Nos permiten guiarnos en la materialización de cualquier obra, por tal motivo,
+          debe tener el orden secuencial del proceso constructivo, haciendo constar, cada etapa de
+      </p>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 col-xl-6">
+        <img id="img2" src="./assets/images/sismoresistente.png" class="img-fluid" alt="Responsive image"><br>
+        <p id="display">MAMPOSTERIA SISMORRESISTENTE</p>
+        <ul id="text2">
+          <li>Mamposteria encadenada: Formadas por vigas y columnas de encadenado(+ usada).</li>
+          <li>Encadenada armada: En la que ademas de vigas y columnas de encadenado se coloca armada en algunas juntas horizontales.</li>
+        </ul>
+    </div>
+  </div>
+  <footer>
+        <p>
+          copy
+        </p>
+  </footer>
 </body>
 </html>
