--- a/index.html
+++ b/index.html
@@ -11,83 +11,92 @@
     <link rel="stylesheet" href="./assets/css/estilos.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-              <header>
-                <h1>Tecnico de obra</h1>
-            
-            <div class="display2" class="col-md-3">
-              <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                  <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#!">Link</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+          <header>
+            <h1>Tecnico de obra</h1>
+        
+        <div class="display2" class="col-md-3">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+                <li class="nav-item active">
+                  <a class="nav-link" href="./index.html">Inicio<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./assets/pages/servicios.html">Servicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./assets/pages/proyectos-realizados.html">Proyectos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./assets/pages/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./assets/pages/nosotros.html">Contacto</a>
+                </li>
+              </ul>
             </div>
-          </header>
+          </nav>
         </div>
-        </div>
+      </header>
     </div>
+    </div>
+</div>
 
-    <div class="row">
-        <div class="col-10 col-md-8 col-lg-8 col-xl-8">
-          <div class="card">
-            <img class="card-img-top" src="./assets/images/direccion-tecnica-jpg.jpg" alt="Card image cap">
-            <h3 class="card-header">Dirección técnica</h3>
-            <div class="card-body">
-              <p class="card-text">Se entiende por dirección técnica la función que el profesional desempeña controlando
-                la fiel interpretación de los planos y de la documentación técnica que forma parte del
-                proyecto, y la revisión y extensión de los certificados correspondientes a pagos de la 
-                obra en ejecución, incluso el ajuste final de los mismos. Un profesional habilitado asume
-                el carácter de Director Técnico de una obra, cuando interviene en ella como supervisor
-                de la conducción técnica de la misma. Actuará como asesor del propietario, siendo su
-                representante natural frente al constructor de la obra, siendo su función, verificar
-                que la misma se realice de conformidad con las reglas del arte de construir constatando
-                que los trabajos respondan adecuadamente al plano de proyecto, pliego de condiciones
-                y especificaciones, calidad de los materiales convenidos y ejecución correcta de
-                estructuras, dando en todos los casos las instrucciones necesarias al constructor, 
-                a fin de que se cumplan todas las disposiciones del contrato</p>
-            </div>
-          </div>
-    </div>
-    <div class="row">
-      <div class="col-12 col-md-6 col-lg-6 col-xl-6">
-        <div id="ancho" class="card">
-          <img class="card-img-top" src="./assets/images/planos-estrucrurales.jpg" alt="Card image cap">
-          <div class="card-body"> <p class="card-body">Los planos estructurales son una representación gráfica de elementos estructurales, que siguen unas ciertas normas
-            para su dibujo y su posterior interpretación. Nos permiten guiarnos en la materialización de cualquier obra, por tal motivo,
-            debe tener el orden secuencial del proceso constructivo, haciendo constar, cada etapa de</p></div>
+<div class="row">
+    <div class="col-10 col-md-8 col-lg-8 col-xl-8">
+      <div class="card">
+        <img class="card-img-top" src="./assets/images/direccion-tecnica-jpg.jpg" alt="Card image cap">
+        <h3 class="card-header">Dirección técnica</h3>
+        <div class="card-body">
+          <p class="card-text">Se entiende por dirección técnica la función que el profesional desempeña controlando
+            la fiel interpretación de los planos y de la documentación técnica que forma parte del
+            proyecto, y la revisión y extensión de los certificados correspondientes a pagos de la 
+            obra en ejecución, incluso el ajuste final de los mismos. Un profesional habilitado asume
+            el carácter de Director Técnico de una obra, cuando interviene en ella como supervisor
+            de la conducción técnica de la misma. Actuará como asesor del propietario, siendo su
+            representante natural frente al constructor de la obra, siendo su función, verificar
+            que la misma se realice de conformidad con las reglas del arte de construir constatando
+            que los trabajos respondan adecuadamente al plano de proyecto, pliego de condiciones
+            y especificaciones, calidad de los materiales convenidos y ejecución correcta de
+            estructuras, dando en todos los casos las instrucciones necesarias al constructor, 
+            a fin de que se cumplan todas las disposiciones del contrato</p>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-6 col-xl-6">
-        <div id="left" class="card">
-          <img src="./assets/images/sismoresistente.png" class="img-fluid" alt="Responsive image">
-          <div class="card-body">
-            <p class="card-text">
-              MAMPOSTERIA SISMORRESISTENTE
-              <ul>
-                <li>Mamposteria encadenada: Formadas por vigas y columnas de encadenado(+ usada).</li>
-                <li>Encadenada armada: En la que ademas de vigas y columnas de encadenado se coloca armada en algunas juntas horizontales.</li>
-              </ul>
-            </p>
-          </div>
-        </div>
+</div>
+<div class="row">
+  <div class="col-12 col-md-6 col-lg-6 col-xl-6">
+    <div id="ancho" class="card">
+      <img class="card-img-top" src="./assets/images/planos-estrucrurales.jpg" alt="Card image cap">
+      <div class="card-body"> <p class="card-body">Los planos estructurales son una representación gráfica de elementos estructurales, que siguen unas ciertas normas
+        para su dibujo y su posterior interpretación. Nos permiten guiarnos en la materialización de cualquier obra, por tal motivo,
+        debe tener el orden secuencial del proceso constructivo, haciendo constar, cada etapa de</p></div>
     </div>
   </div>
-  <footer class="col-12">
-        <p>
-          copy
+  <div class="col-12 col-md-6 col-lg-6 col-xl-6">
+    <div id="left" class="card">
+      <img src="./assets/images/sismoresistente.png" class="img-fluid" alt="Responsive image">
+      <div class="card-body">
+        <p class="card-text">
+          MAMPOSTERIA SISMORRESISTENTE
+          <ul>
+            <li>Mamposteria encadenada: Formadas por vigas y columnas de encadenado(+ usada).</li>
+            <li>Encadenada armada: En la que ademas de vigas y columnas de encadenado se coloca armada en algunas juntas horizontales.</li>
+          </ul>
         </p>
-  </footer>
+      </div>
+    </div>
+</div>
+</div>
+<footer class="col-12">
+    <p>
+      copy
+    </p>
+</footer>
 </body>
 </html>
