segunda entrega del proyecto final

--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -37,7 +37,7 @@
                       <a class="nav-link" href="./nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./nosotros.html">Contacto</a>
+                      <a class="nav-link" href="./contacto.html">Contacto</a>
                     </li>
                   </ul>
                 </div>
@@ -46,16 +46,51 @@
           </header>
         </div>
         </div>
+        <div class="row justify-content-center">
+        <div class="col-12"> 
+          <h5>Diseñamos espacios perfectos</h5>
+        </div>
+      </div>
+      <section>
+        <article>
+          <div id="margen" class="row">
+          <div class="card col-xl-6">
+            <div class="card-body">
+              <p class="card-text">
+                Con mi equipo de trabajo nos encargamos de diseñar, graficar y desarrollar edificaciones de alto nivel.
+              contamos con servicios de AutoCAD y Sketchup, realizamos presupuestos de obra, dirección técnica , etc.
+              </p>
+            </div>
+          </div>
+        </div>
+        </article>
+      </section>
         <div class="row">
-        <div class="col-xl-12">
-            <div id="width" class="card">
-                <div class="card-body">
-                  <h4 id="font" class="card-title">Diseñamos espacios perfectos</h4>
-                </div>
-              </div>
+          <div class="col-6 col-xl-6">
+            <div class="card">
+              <img class="card-img-top" src="../images/autocad-8211-1-3-dibujar-el-plano-de-una-casa-paso-a-paso-en-autocad-2015.jpg" alt="imagen de uso de autocad">
+              <div class="card-body"> Este es un ejemplo de como se usa el autoCAD </div>
+            </div>
+          </div>
+          <div class="col-6 col-xl-6">
+            <div class="card">
+              <img class="card-img-top" src="../images/sketchup.jpg" alt="imagen de como se usa sketchup">
+              <div class="card-body"> Este es un ejemplo de como se usa sketchup </div>
+            </div>
+          </div>
         </div>
+    <div class="row">
+        <div class="col-6 col-xl-6">
+          <div id="content" class="card">
+            <img class="card-img-top" src="../images/render.png" alt="imagen de renderizado">
+            <div class="card-body"> Este es un ejemplo de como se usa render </div>
+          </div>
         </div>
-        </div>
+      </div>
+    </div>
+        <footer>
+          <p>Copyright  &copy;2022 - Bk  </p>
+        </footer>
 </body>
 
 </html>
