--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <div class="col-12">
           <header>
             <h1>Tecnico de obra</h1>
-        
         <div class="display2" class="col-md-3">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,10 +47,10 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-10 col-md-8 col-lg-8 col-xl-8">
+<div class="row justify-content-center">
+    <div class="col-12 col-md-10 col-lg-6 col-xl-8">
       <div class="card">
-        <img class="card-img-top" src="./assets/images/direccion-tecnica-jpg.jpg" alt="Card image cap">
+        <img class="card-img-top" src="./assets/images/direccion-tecnica-jpg.jpg" alt="imagen de direccion tecnica ">
         <h3 class="card-header">Dirección técnica</h3>
         <div class="card-body">
           <p class="card-text">Se entiende por dirección técnica la función que el profesional desempeña controlando
@@ -69,10 +68,10 @@
         </div>
       </div>
 </div>
-<div class="row">
+<div class="row justify-content-center">
   <div class="col-12 col-md-6 col-lg-6 col-xl-6">
-    <div id="ancho" class="card">
-      <img class="card-img-top" src="./assets/images/planos-estrucrurales.jpg" alt="Card image cap">
+    <div class="card">
+      <img class="card-img-top" src="./assets/images/planos-estrucrurales.jpg" alt="imagen de planos estructurales">
       <div class="card-body"> <p class="card-body">Los planos estructurales son una representación gráfica de elementos estructurales, que siguen unas ciertas normas
         para su dibujo y su posterior interpretación. Nos permiten guiarnos en la materialización de cualquier obra, por tal motivo,
         debe tener el orden secuencial del proceso constructivo, haciendo constar, cada etapa de</p></div>
@@ -80,7 +79,7 @@
   </div>
   <div class="col-12 col-md-6 col-lg-6 col-xl-6">
     <div id="left" class="card">
-      <img src="./assets/images/sismoresistente.png" class="img-fluid" alt="Responsive image">
+      <img src="./assets/images/sismoresistente.png" class="img-fluid" alt="imagen de SISMORRESISTENCIA de muros">
       <div class="card-body">
         <p class="card-text">
           MAMPOSTERIA SISMORRESISTENTE
@@ -95,7 +94,7 @@
 </div>
 <footer class="col-12">
     <p>
-      copy
+      Copyright  &copy;2022 - Bk
     </p>
 </footer>
 </body>
