--- a/assets/pages/nosotros.html
+++ b/assets/pages/nosotros.html
@@ -5,47 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tecnico en obra</title>
+    <link rel="stylesheet" href="boostrap/css/bootstrap.min.css">
+    <script src="boostrap/js/jquery.slim.min.js"></script>
+    <script src="boostrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <!--Este es mi menu-->
-    <div class="grid">
-    <header>
-        <h1>TÉCNICO DE OBRA</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="../../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="./servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="./nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="./proyectos-realizados.html"> Proyectos realizados</a>
-                </li>
-                <li>
-                    <a href="./contacto.html">Contacto</a>
-                </li>
-                <li><a href="././index.html"><img src="../images/whatsapp.png" width="30px" height="30px" alt=""></a></li>
-            </ul>
-        </nav>
-    </header>
-    
-<main>
-    <section>
-        <h3>Somos un equipo de M.M.O. que pensamos en vos</h3>
-    </section>
-    <div>
-        <p id="enfoque">sabemos que habra dificultades en el camino, pero estaremos ahi cuando ocurran.</p>
-    </div>
-</main>
-
-    <footer>
-        <p>Este es mi footer</p>
-    </footer>
-    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+            <header>
+                <h1>Tecnico de obra</h1>
+                <div class="display2" class="col-md-3">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                        </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="../../index.html">Inicio<span class="sr-only"></span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./servicios.html">Servicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./proyectos-realizados.html">Proyectos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                    </nav>
+            </header>
+            </div>
+            <div class="col-2">
+            <!-- Content -->
+            </div>
+            <div class="col-8">
+            <!-- Content -->
+            </div>
+        </div>
+      </div>
 </body>
 </html>
