--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-12">
               <header>
-                <h1>Tecnico de obra</h1>
+                <h1 class="media">Tecnico de obra</h1>
             
             <div class="display2" class="col-md-3">
               <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -48,21 +48,15 @@
         </div>
         <div class="row justify-content-center">
         <div class="col-12"> 
-          <h5>Diseñamos espacios perfectos</h5>
+          <h5 id="size">Diseñamos espacios perfectos</h5>
         </div>
       </div>
       <section>
         <article>
-          <div id="margen" class="row">
-          <div class="card col-xl-6">
-            <div class="card-body">
-              <p class="card-text">
+              <p id="none">
                 Con mi equipo de trabajo nos encargamos de diseñar, graficar y desarrollar edificaciones de alto nivel.
               contamos con servicios de AutoCAD y Sketchup, realizamos presupuestos de obra, dirección técnica , etc.
               </p>
-            </div>
-          </div>
-        </div>
         </article>
       </section>
         <div class="row">
