--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-12">
           <header>
-            <h1>Tecnico de obra</h1>
+            <h1 class="media">Tecnico de obra</h1>
         <div class="display2" class="col-md-3">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
