pagina completada las 5

--- a/assets/pages/nosotros.html
+++ b/assets/pages/nosotros.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-12">
             <header>
-                <h1>Tecnico de obra</h1>
+                <h1 class="media">Tecnico de obra</h1>
                 <div class="display2" class="col-md-3">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,13 +43,30 @@
                     </nav>
             </header>
             </div>
-            <div class="col-2">
-            <!-- Content -->
+            <div class="row justify-content-center">
+            <div class="col-10 col-md-10 col-lg-10 col-xl-10">
+                <h5 class="size">Somos un equipo de M.M.O. que 
+                    pensamos en vos
+                </h5>
             </div>
-            <div class="col-8">
-            <!-- Content -->
+            </div>
+            <div class="col-12 col-md-8">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <h1 class="display-3">Somos Maestros mayor de obras</h1>
+                            <p class="lead">Tenemos conocimientos solidos en lo sismoterrestre,
+                                instalaciones de gas, sanitarias, electricidad y de 
+                                pluviales.Contamos con expreriencia en autoCAD y sketchup, hacemos
+                                todo lo posible por diseñar espacios bien orientados y lindos.
+                                Somos graduados del Ipemyt 24 de Malvinas Argentinas,Cordoba.
+                            </p>
+                    </div>
+                </div>
             </div>
         </div>
-      </div>
+        </div>
+        <footer>
+            <p>Copyright  &copy;2022 - Bk  </p>
+        </footer>
 </body>
 </html>
