--- a/assets/pages/proyectos-realizados.html
+++ b/assets/pages/proyectos-realizados.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
-                <header>
+                <header class="header">
                     <h1 class="media">Tecnico de obra</h1>
                 
                 <div class="display2" class="col-md-3">
