--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -48,7 +48,7 @@
         </div>
         <div class="row justify-content-center">
         <div class="col-12"> 
-          <h5 id="size">Diseñamos espacios perfectos</h5>
+          <h5 class="size">Diseñamos espacios perfectos</h5>
         </div>
       </div>
       <section>
