--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="col-12 col-md-10 col-lg-6 col-xl-8">
       <div class="card">
         <img class="card-img-top" src="./assets/images/direccion-tecnica-jpg.jpg" alt="imagen de direccion tecnica ">
-        <h3 class="card-header">Dirección técnica</h3>
+        <h4 class="card-header">Dirección técnica</h4>
         <div class="card-body">
           <p class="card-text">Se entiende por dirección técnica la función que el profesional desempeña controlando
             la fiel interpretación de los planos y de la documentación técnica que forma parte del
@@ -94,8 +94,13 @@
 </div>
 <footer class="col-12">
     <p>
-      Copyright  &copy;2022 - Bk
+      Copyright  &copy;2022 - Bk 
     </p>
+    <div >
+      <a href="" target="_blank"></a>
+      <a  href="" target="_blank"></a>
+      <a  href="https://www.instagram.com/promiedosok/" target="_blank"></a>
+  </div>
 </footer>
 </body>
 </html>
