--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -76,9 +76,8 @@
                     <textarea name="Tu consulta" id="comentarios" cols="30" rows="10" placeholder="Escribe algo"></textarea>
                 </div>
                 <div>
-                    <input type="submit" value="ENVIAR">
-                    <input type="reset" value="BORRAR">
-    
+                    <input type="submit" class="btn btn-primary" value="ENVIAR">
+                    <input type="reset" class="btn btn-secondary" value="BORRAR">
                 </div>
             </fieldset>
         </form>
