--- a/assets/pages/proyectos-realizados.html
+++ b/assets/pages/proyectos-realizados.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
-                <header class="header">
+                <header>
                     <h1 class="media">Tecnico de obra</h1>
                 
                 <div class="display2" class="col-md-3">
@@ -47,17 +47,17 @@
             </div>
         </div>
 
-<div class="grid">
+<div>
     <div id="titulo">
-        <h3>Proyectos realizados</h3>
+        <h3 class="titulo">Proyectos realizados</h3>
     </div>
     <div id="imagen">
-        <img class="responsive" src="../images/descarga.jpg" height="300px" width="400px" alt="">
-        <img class="responsive" src="../images/1642186308.jpg" height="300px" width="400px" alt="">
-        <img class="responsive" src="../images/images.jpg" height="300px" width="400px" alt="">
-        <img class="responsive" src="../images/sketchup.jpg" height="300px" width="400px" alt="">
-        <img class="responsive" src="../images/renders-vista-detall-original.webp" height="300px" width="400px" alt="">
-        <img class="responsive" src="../images/render.png" height="300px" width="400px" alt="">
+        <img class="responsive" src="../images/descarga.jpg" height="200px" width="250px" alt="">
+        <img class="responsive" src="../images/1642186308.jpg" height="200px" width="250px" alt="">
+        <img class="responsive" src="../images/images.jpg" height="200px" width="250px" alt="">
+        <img class="responsive" src="../images/sketchup.jpg" height="200px" width="250px" alt="">
+        <img class="responsive" src="../images/renders-vista-detall-original.webp" height="200px" width="250px" alt="">
+        <img class="responsive" src="../images/render.png" height="200px" width="250px" alt="">
     </div>
     <footer id="margin-top">
         <p>Copyright  &copy;2022 - Bk</p> 
