--- a/assets/pages/proyectos-realizados.html
+++ b/assets/pages/proyectos-realizados.html
@@ -57,7 +57,7 @@
         <img class="responsive" src="../images/images.jpg" height="200px" width="250px" alt="">
         <img class="responsive" src="../images/sketchup.jpg" height="200px" width="250px" alt="">
         <img class="responsive" src="../images/renders-vista-detall-original.webp" height="200px" width="250px" alt="">
-        <img class="responsive" src="../images/render.png" height="200px" width="250px" alt="">
+        <img id="alto" class="responsive" src="../images/render.png" height="200px" width="250px" alt="">
     </div>
     <footer id="margin-top">
         <p>Copyright  &copy;2022 - Bk</p> 
