--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="diseña tu propia casa al estilo que tu quieras,
+    somos un gran equipo de M.M.O que nos encargamos de diseñar planos 2D 
+    al objetivo del cliente">
+    <meta name="description" content="arquitectura, diseño de planos, dirección técnica, construcción.">
     <title>Document</title>
     <link rel="stylesheet" href="boostrap/css/bootstrap.min.css">
     <script src="boostrap/js/jquery.slim.min.js"></script>
@@ -11,7 +15,7 @@
     <link rel="stylesheet" href="./assets/css/estilos.css">
 </head>
 <body>
-  <div class="container-fluid">
+  <div>
     <div class="row">
         <div class="col-12">
           <header>
@@ -33,7 +37,7 @@
                   <a class="nav-link" href="./assets/pages/proyectos-realizados.html">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./assets/pages/nosotros.html">Nosotros</a>
+                  <a class="nav-link" href="./assets/pages/Nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./assets/pages/nosotros.html">Contacto</a>
@@ -48,7 +52,7 @@
 </div>
 
 <div class="row justify-content-center">
-    <div class="col-8 col-md-10 col-lg-6 col-xl-8">
+    <div class="col-12 col-md-10 col-lg-6 col-xl-8">
       <div class="card">
         <img class="card-img-top" src="./assets/images/direccion-tecnica-jpg.jpg" alt="imagen de direccion tecnica ">
         <h4 class="card-header">Dirección técnica</h4>
@@ -69,7 +73,7 @@
       </div>
 </div>
 <div class="row justify-content-center">
-  <div class="col-8 col-md-6 col-lg-6 col-xl-6">
+  <div class="col-12 col-md-6 col-lg-6 col-xl-5">
     <div class="card">
       <img class="card-img-top" src="./assets/images/planos-estrucrurales.jpg" alt="imagen de planos estructurales">
       <div class="card-body"> <p class="card-body">Los planos estructurales son una representación gráfica de elementos estructurales, que siguen unas ciertas normas
@@ -77,7 +81,7 @@
         debe tener el orden secuencial del proceso constructivo, haciendo constar, cada etapa de</p></div>
     </div>
   </div>
-  <div class="col-8 col-md-6 col-lg-6 col-xl-6">
+  <div class="col-12 col-md-6 col-lg-6 col-xl-5">
     <div id="left" class="card">
       <img src="./assets/images/sismoresistente.png" class="img-fluid" alt="imagen de SISMORRESISTENCIA de muros">
       <div class="card-body">
