--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -88,7 +88,9 @@
     </div>
 </div>
     <footer>
-        <p>Este es mi footer</p>
+        <p>
+            Copyright  &copy;2022 - Bk 
+        </p>
     </footer>
     </div>
 </body>
