--- a/assets/pages/proyectos-realizados.html
+++ b/assets/pages/proyectos-realizados.html
@@ -28,7 +28,7 @@
                                 <a class="nav-link" href="../../index.html">Inicio<span class="sr-only"></span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./servicios.html">Servicio</a>
+                                <a class="nav-link" href="./servicios.html">Servicios</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./proyectos-realizados.html">Proyectos</a>
