--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <a class="nav-link" href="./index.html">Inicio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./assets/pages/servicios.html">Servicio</a>
+                  <a class="nav-link" href="./assets/pages/servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./assets/pages/proyectos-realizados.html">Proyectos</a>
